--- a/01/01.html
+++ b/01/01.html
@@ -13,6 +13,23 @@
 
     <section>
       <h2>Hobbies</h2>
+
+      <!-- Add new hobbie -->
+      <form>
+        <div class="field">
+          <input type="text" placeholder="New hobbie" id="new-hobbie-name" v-model="newHobbie.name">
+          <label for="new-hobbie-name">New Hobbie</label>
+        </div>
+        <div class="field">
+          <input type="number" id="new-hobbie-hours-per-day" v-model="newHobbie.hoursPerDay" placeholder="Hours per day">
+          <label for="new-hobbie-hours-per-day">Hours per day</label>
+        </div>
+        <div class="form-actions">
+          <!-- <button v-on:click="addNewHobbie">Add new hobbie</button> --> <!-- 'Old versions' -->
+          <button @click="addNewHobbie">Add new hobbie</button> <!-- 'New versions' -->
+        </div>
+      </form>
+      
       <!-- Render the hobbies array -->
       <ul>
         <li v-for="hobbie of hobbies">
