Add progress bars average

--- a/05/05.html
+++ b/05/05.html
@@ -26,6 +26,9 @@
         <label :for="'config-' + index">Progress jump</label>
       </div>
     </div>
+    <div class="average">
+      <p><strong>Progress bars average:</strong> <span>{{pregressBarsAverage}}%</span></p>
+    </div>
   </div>
   <!-- Development version of Vue.js -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
